# project

12/: .travis.yml  12.code-workspace  CMakeLists.txt  Doxyfile  README.md
12/include/: CMakeLists.txt  gveditor.h  gveditor_basefncl.h  gveditor_controller.h  gveditor_coord2d.h  gveditor_doc.h  gveditor_igui.h  gveditor_iobj.h  gveditor_shapes.h  version.h.in
12/src/: CMakeLists.txt  gveditor.cpp  gveditor_basefncl.cpp  gveditor_controller.cpp  gveditor_doc.cpp  gveditor_iobj.cpp  gveditor_shapes.cpp  version.cpp
SSSr/: CMakeLists.txt  ProjectTask.md
SSSr/sssrserver/: CMakeLists.txt  README.md  version.h.in
SSSr/sssrserver/include/: serverapp.h
SSSr/sssrserver/other/sssr/: CMakeLists.txt  sssr_version.h.in
SSSr/sssrserver/other/sssr/headers/: ssserver.hpp  ssserver.lib.config.hpp  sssr.hpp
SSSr/sssrserver/other/sssr/solver/: CMakeLists.txt  lib.cpp  lib.h
SSSr/sssrserver/other/sssr/src/: CMakeLists.txt  chat_server_example.cpp  ssserver.cpp  ssserver.lib.config.txt  sssr.cpp  sssr_version.cpp
SSSr/sssrserver/res/: Config.txt
SSSr/sssrserver/src/: CMakeLists.txt  main.cpp  serverapp.cpp  version.cpp
