cmake_minimum_required(VERSION 3.2)

set(BUILD_VER 1)
set(BUILD_SUBVER 0)
set(BUILD_PATCH 0)

if (DEFINED ENV{TRAVIS_BUILD_NUMBER})
    set (BUILD_PATCH $ENV{TRAVIS_BUILD_NUMBER})
endif()

project(gveditor VERSION ${BUILD_VER}.${BUILD_SUBVER}.${BUILD_PATCH})

add_subdirectory(include)
add_subdirectory(src)
